--- a/index.html
+++ b/index.html
@@ -59,6 +59,133 @@
                 </div>
             </div>
         </section>
+
+        <aside id="lateral">
+            <div class="search">
+                <h3>buscar</h3>
+                <div id="search" class="aside-box">
+                    <form action="">
+                        <input type="text" name="text" id="text">
+                        <input type="button" value="search" class="icon">
+                    </form>
+                </div>
+            </div>
+            <div class="login">
+                <h3>login</h3>
+                <div id="login" class="aside-box">
+                    <form action="">
+                        <label for="user" id="user">user</label>
+                        <input type="email" name="user" id="user" required><br>
+                        <label for="password">password</label>
+                        <input type="password" name="password" id="password" required><br>
+                        <input type="submit" value="login">
+                        <input type="reset" value="clean"><br>
+                        <a href="#">registrate</a><br>
+                        <a href="#">olvidaste tu contraseña</a>
+                    </form>
+                </div>
+            </div>
+            <div class="social">
+                <h3>redes sociales</h3>
+                <div id="social" class="aside-box">
+                    <div class="twitter">
+                        <a href="#">t</a>
+                    </div>
+                    <div class="facebook">
+                        <a href="#">t</a>
+                    </div>
+                    <div class="youtube">
+                        <a href="#">t</a>
+                    </div>
+                    <div class="github">
+                        <a href="#">t</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsors">
+                <h3>patrocinadores</h3>
+                <div id="sponsors" class="aside-box"></div>
+            </div>
+        </aside>
+
+        <section id="articles">
+            <h2>ultimos articulos</h2>
+            <div class="clearfix"></div>
+            <article>
+                <div class="data">
+                    <div class="date">
+                        <p>Fecha: <span>10 de enero de 2023</span></p>
+                        <p>Categoria: <span>pruebas</span></p>
+                    </div>
+                    <h4>
+                        <a href="#">titulo del articulo</a>
+                    </h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis inventore eligendi nesciunt minus nulla alias quibusdam optio corporis facere iusto maxime repellat laboriosam fugit qui, nostrum quis ut architecto tenetur.</p>
+                </div>
+            </article>
+            <article>
+                <div class="data">
+                    <div class="date">
+                        <p>Fecha: <span>10 de enero de 2023</span></p>
+                        <p>Categoria: <span>pruebas</span></p>
+                    </div>
+                    <h4>
+                        <a href="#">titulo del articulo</a>
+                    </h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis inventore eligendi nesciunt minus nulla alias quibusdam optio corporis facere iusto maxime repellat laboriosam fugit qui, nostrum quis ut architecto tenetur.</p>
+                </div>
+            </article>
+            <article>
+                <div class="data">
+                    <div class="date">
+                        <p>Fecha: <span>10 de enero de 2023</span></p>
+                        <p>Categoria: <span>pruebas</span></p>
+                    </div>
+                    <h4>
+                        <a href="#">titulo del articulo</a>
+                    </h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis inventore eligendi nesciunt minus nulla alias quibusdam optio corporis facere iusto maxime repellat laboriosam fugit qui, nostrum quis ut architecto tenetur.</p>
+                </div>
+            </article>
+            <article>
+                <div class="data">
+                    <div class="date">
+                        <p>Fecha: <span>10 de enero de 2023</span></p>
+                        <p>Categoria: <span>pruebas</span></p>
+                    </div>
+                    <h4>
+                        <a href="#">titulo del articulo</a>
+                    </h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis inventore eligendi nesciunt minus nulla alias quibusdam optio corporis facere iusto maxime repellat laboriosam fugit qui, nostrum quis ut architecto tenetur.</p>
+                </div>
+            </article>
+            <article id="blog">
+                <a href="#">Ir al blog</a>
+            </article>
+        </section>
     </section>
+    
+    <div class="clearfix"></div>
+    <footer id="footer">
+        <div class="wrap">
+            <nav id="menu-footer">
+                <h5>menu</h5>
+                <ul>
+                    <li><a href="#">a</a></li>
+                    <li><a href="#">a</a></li>
+                    <li><a href="#">a</a></li>
+                    <li><a href="#">a</a></li>
+                </ul>
+            </nav>
+            <div id="location">
+                <h5>locacion</h5>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37443.54319528842!2d12.475671895024051!3d41.89586599350864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f61b6532013ad%3A0x28f1c82e908503c4!2sColiseo%20de%20Roma!5e0!3m2!1ses!2sar!4v1673388253498!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div id="info">
+                <h5>desarrollado por mi</h5>
+                <p>html, css</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
