--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <!-- <a href="https://www.freepik.es/foto-gratis/cierre-arriba-fondo-texturizado-marmol-negro_3472377.htm#query=fondo%20marmol&position=3&from_view=keyword">Imagen de rawpixel.com</a> en Freepik -->
 </head>
 <body>
@@ -60,6 +61,7 @@
             </div>
         </section>
 
+        <div class="clearfix"></div>
         <aside id="lateral">
             <div class="search">
                 <h3>buscar</h3>
